# yb-django

./: README.md  README.rst  django_3.2_test_suite.sh  django_test_suite.sh  requirements.txt  setup.cfg  setup.py  yugabyte_settings.py
.github/workflows/: django_3.2_test.yml  django_4.0_test.yml  django_4.1_test.yml  django_test.yml
django_yugabytedb/: base.py  client.py  features.py  introspection.py  schema.py
yb_backend/: base.py  creation.py  features.py  operations.py
