[metadata]
name = Yugabyte
version = attr: django.__version__
url = https://www.yugabyte.com/
author = Yugabyte
author_email = hbhanawat@yugabyte.com
description = Django Backend for Yugabyte
long_description = file: README.md
license = Apache
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django Backend for Yugabyte
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://www.yugabyte.com

[flake8]
max-line-length = 119

[options]
python_requires = >=3.8

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = yugabyte
line_length = 79
multi_line_output = 5
